# Chore-Board

./: .gitignore  Cargo.toml  README.md
settings/: base.yaml
src/: lib.rs  main.rs  settings.rs  startup.rs  templates.rs
src/endpoints/: index.rs  mod.rs  points.rs  rotate.rs  templates.rs  user.rs
src/models/: helpers.rs
static/: schema.sql
static/css/: style.css  style.css.map
static/scss/: _main.scss  style.scss
templates/: base.html  index.html  login.html  rotate.html
