[package]
name = "chore_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-session = "0.10.1"
actix-web = "4.11.0"
askama = "0.14.0"
config = { version = "0.15.14", features = ["yaml"] }
deadpool-redis = "0.22.0"
dotenv = "0.15.0"
lettre = { version = "0.11.18", features = ["tracing"] }
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json", "serialize"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
