[package]
name = "chore_tracker"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "deny", priority = 1 }
wildcard_imports = "deny"
must_use_candidate = "warn"
enum_glob_use = "deny"
nursery = { level = "deny", priority = 1 }
unwrap_used = "deny"

[profile.release]
overflow-checks = false
lto = "fat"  # LTO can produce better optimized code; 'false', 'fat', 'thin', or 'off'
codegen-units = 16  # Split crate into units to increase parallelism during compilation, may produce slower code; '1 - 256'
panic = "abort"
incremental = false  # Store cache data to disk in the 'target' dir for quicker recompilation
opt-level = 3
strip = "symbols"  # equivalent to strip = true
rpath = false  
debug-assertions = false
debug = false

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.6"
actix-session = "0.10.1"
actix-web = "4.11.0"
askama = "0.14.0"
config = { version = "0.15.14", features = ["yaml"] }
deadpool-redis = "0.22.0"
dotenv = "0.15.0"
lettre = { version = "0.11.18", features = ["tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
